added modules not double

--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -291,6 +291,7 @@ PL_B_8 : "🔢 Play Top 10"
 PL_B_9 : "🤖 Play Global Top 10 Tracks"
 PL_B_10 : "🏘 Play Group's Top 10 Tracks"
 PL_B_11 : "👤 Play Personal Top 10 Tracks"
+PL_B_12 : "🌀 Inline"
 
 
 #Settings
