--- a/strings/langs/id.yml
+++ b/strings/langs/id.yml
@@ -277,7 +277,7 @@ PL_B_8 : "🔢 10 Besar"
 PL_B_9 : "🤖 10 Global"
 PL_B_10 : "🏘 10 Grup"
 PL_B_11 : "👤 10 Pribadi"
-PL_B_12 : "🌀 Inline"
+PL_B_12 : "「Iɴʟɪɴᴇ」"
 
 #Pengaturan
 ST_B_1 : "🔊 Kualitas Audio"
